--- a/MagicVilla_VillaAPI/MagicVilla_VillaAPI.csproj
+++ b/MagicVilla_VillaAPI/MagicVilla_VillaAPI.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
   </ItemGroup>
 
