Added Entity Framework

--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=0746-0000\\SQLEXPRESS01;Database=Magic_VillaAPI;User Id=sa;Password=aloha@123;TrustServerCertificate=True;"
+  }
 }
